--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "scrapTwitter",
+  "name": "scrap",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/main.js"
+    "build": "tsc -p ./",
+    "start": "node ./dist/main.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ZavenPetrosyan/scrapTwitter#readme",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/pg": "^8.6.6",
     "@types/twitter": "^1.7.1",
     "ts-node": "^10.9.1",
@@ -27,8 +28,11 @@
   "dependencies": {
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "pg": "^8.10.0",
+    "reflect-metadata": "^0.1.13",
     "twitter": "^1.7.1",
-    "twitter-api-v2": "^1.14.2"
+    "twitter-api-v2": "^1.14.2",
+    "typeorm": "^0.3.12"
   }
 }
