--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "dev": "ts-node --inspect=9229 index.ts",
     "build": "tsc -p ./",
     "start": "node ./dist/main.js"
   },
